--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
     <link rel="icon" href="">
     <script src="https://kit.fontawesome.com/d9e33f69d6.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <div id="root">
-
-    </div>
+<body id="root">
+    
 </body>
 </html>
