--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React &mdash; Stopwatch</title>
-    <link rel="icon" href="">
+    <title>Stopwatch</title>
+    <link rel="icon" href="clock.jpg">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d9e33f69d6.js" crossorigin="anonymous"></script>
 </head>
 <body id="root">
